BulletSharpPInvoke/Dynamics/TypedConstraint.cs


			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btTypedConstraint_btConstraintInfo2_new();
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btTypedConstraint_btConstraintInfo2_getCfm(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btTypedConstraint_btConstraintInfo2_getConstraintError(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btTypedConstraint_btConstraintInfo2_getDamping(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btTypedConstraint_btConstraintInfo2_getErp(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btTypedConstraint_btConstraintInfo2_getFindex(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btTypedConstraint_btConstraintInfo2_getFps(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btTypedConstraint_btConstraintInfo2_getJ1angularAxis(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btTypedConstraint_btConstraintInfo2_getJ1linearAxis(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btTypedConstraint_btConstraintInfo2_getJ2angularAxis(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btTypedConstraint_btConstraintInfo2_getJ2linearAxis(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btTypedConstraint_btConstraintInfo2_getLowerLimit(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern int btTypedConstraint_btConstraintInfo2_getNumIterations(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern int btTypedConstraint_btConstraintInfo2_getRowskip(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btTypedConstraint_btConstraintInfo2_getUpperLimit(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setCfm(IntPtr obj, IntPtr value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setConstraintError(IntPtr obj, IntPtr value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setDamping(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setErp(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setFindex(IntPtr obj, IntPtr value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setFps(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setJ1angularAxis(IntPtr obj, IntPtr value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setJ1linearAxis(IntPtr obj, IntPtr value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setJ2angularAxis(IntPtr obj, IntPtr value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setJ2linearAxis(IntPtr obj, IntPtr value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setLowerLimit(IntPtr obj, IntPtr value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setNumIterations(IntPtr obj, int value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setRowskip(IntPtr obj, int value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setUpperLimit(IntPtr obj, IntPtr value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_delete(IntPtr obj);
		}

        internal IntPtr _native;

        private static RigidBody _fixedBody;

        protected RigidBody _rigidBodyA;
        protected RigidBody _rigidBodyB;

        internal static TypedConstraint GetManaged(IntPtr native)
        {
            if (native == IntPtr.Zero)
            {
                return null;
            }

            IntPtr handlePtr = btTypedConstraint_getUserConstraintPtr(native);
            return GCHandle.FromIntPtr(handlePtr).Target as TypedConstraint;
        }

		internal TypedConstraint(IntPtr native)
		{
            _native = native;

            if (btTypedConstraint_getUserConstraintId(_native) != -1)
            {
                throw new InvalidOperationException();
            }

            GCHandle handle = GCHandle.Alloc(this, GCHandleType.Weak);
            btTypedConstraint_setUserConstraintPtr(_native, GCHandle.ToIntPtr(handle));
		}

		public void BuildJacobian()
		{
			btTypedConstraint_buildJacobian(_native);
		}

		public int CalculateSerializeBufferSize()
		{
			return btTypedConstraint_calculateSerializeBufferSize(_native);
		}

		public void EnableFeedback(bool needsFeedback)
		{
			btTypedConstraint_enableFeedback(_native, needsFeedback);
		}

		public void GetInfo1(ConstraintInfo1 info)
		{
			btTypedConstraint_getInfo1(_native, info._native);
		}

		public void GetInfo2(ConstraintInfo2 info)
		{
			btTypedConstraint_getInfo2(_native, info._native);
		}

        public float GetParam(ConstraintParam num)
		{
			return btTypedConstraint_getParam(_native, num);
		}

        public float GetParam(ConstraintParam num, int axis)
		{
			return btTypedConstraint_getParam2(_native, num, axis);
		}

		public float InternalGetAppliedImpulse()
		{
			return btTypedConstraint_internalGetAppliedImpulse(_native);
		}

		public void InternalSetAppliedImpulse(float appliedImpulse)
		{
			btTypedConstraint_internalSetAppliedImpulse(_native, appliedImpulse);
		}

		public bool NeedsFeedback()
		{
			return btTypedConstraint_needsFeedback(_native);
		}

		public string Serialize(IntPtr dataBuffer, Serializer serializer)
		{
			return Marshal.PtrToStringAnsi(btTypedConstraint_serialize(_native, dataBuffer, serializer._native));
		}

        public void SetParam(ConstraintParam num, float value)
		{
			btTypedConstraint_setParam(_native, num, value);
		}

        public void SetParam(ConstraintParam num, float value, int axis)
		{
			btTypedConstraint_setParam2(_native, num, value, axis);
		}
        /*
		public void SetupSolverConstraint(ConstraintArray ca, int solverBodyA, int solverBodyB, float timeStep)
		{
			btTypedConstraint_setupSolverConstraint(_native, ca._native, solverBodyA, solverBodyB, timeStep);
		}

		public void SolveConstraintObsolete(SolverBody __unnamed0, SolverBody __unnamed1, float __unnamed2)
		{
			btTypedConstraint_solveConstraintObsolete(_native, __unnamed0._native, __unnamed1._native, __unnamed2);
		}
        */
		public float AppliedImpulse
		{
			get { return btTypedConstraint_getAppliedImpulse(_native); }
		}

		public float BreakingImpulseThreshold
		{
			get { return btTypedConstraint_getBreakingImpulseThreshold(_native); }
			set { btTypedConstraint_setBreakingImpulseThreshold(_native, value); }
		}

		public TypedConstraintType ConstraintType
		{
			get { return btTypedConstraint_getConstraintType(_native); }
		}

		public float DebugDrawSize
		{
			get { return btTypedConstraint_getDbgDrawSize(_native); }
			set { btTypedConstraint_setDbgDrawSize(_native, value); }
		}

		public static RigidBody FixedBody
		{
            get
            {
                if (_fixedBody == null)
                {
                    _fixedBody = new RigidBody(btTypedConstraint_getFixedBody());
                    _fixedBody._preventDelete = true;
                }
                return _fixedBody;
            }
		}

		public bool IsEnabled
		{
			get { return btTypedConstraint_isEnabled(_native); }
			set { btTypedConstraint_setEnabled(_native, value); }
		}

		public JointFeedback JointFeedback
		{
            get
            {
                IntPtr ptr = btTypedConstraint_getJointFeedback(_native);
                return (ptr != IntPtr.Zero) ? new JointFeedback(ptr) : null;
            }
			set { btTypedConstraint_setJointFeedback(_native, value._native); }
		}

		public int OverrideNumSolverIterations
		{
			get { return btTypedConstraint_getOverrideNumSolverIterations(_native); }
			set { btTypedConstraint_setOverrideNumSolverIterations(_native, value); }
		}

		public RigidBody RigidBodyA
		{
            get { return CollisionObject.GetManaged(btTypedConstraint_getRigidBodyA(_native)) as RigidBody; }
		}

		public RigidBody RigidBodyB
		{
            get { return CollisionObject.GetManaged(btTypedConstraint_getRigidBodyB(_native)) as RigidBody; }
		}

		public int Uid
		{
			get { return btTypedConstraint_getUid(_native); }
		}

		public int UserConstraintId
		{
			get { return btTypedConstraint_getUserConstraintId(_native); }
			set { btTypedConstraint_setUserConstraintId(_native, value); }
		}

        public Object Userobject { get; set; }

		public int UserConstraintType
		{
			get { return btTypedConstraint_getUserConstraintType(_native); }
			set { btTypedConstraint_setUserConstraintType(_native, value); }
		}

        public void Dispose()
        {
            Dispose(true);
            GC.SuppressFinalize(this);
        }


        protected virtual void Dispose(bool disposing)
        {
            if (_native != IntPtr.Zero)
            {
                if (btTypedConstraint_getUserConstraintId(_native) != -1)
                {
                    IntPtr handlePtr = btTypedConstraint_getUserConstraintPtr(_native);
                    GCHandle.FromIntPtr(handlePtr).Free();
                    btTypedConstraint_delete(_native);
                }
                _native = IntPtr.Zero;
            }
        }

        ~TypedConstraint()
        {
            Dispose(false);
        }
